--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-25 17:30+0300\n"
+"POT-Creation-Date: 2022-11-29 20:04+0300\n"
 "PO-Revision-Date: 2022-11-22 22:05+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -92,6 +92,23 @@ msgstr "Ungültige Anfrage"
 #: region/views/retrieve_cash.py:41 region/views/start_auto.py:28
 #: region/views/start_auto.py:36 region/views/start_auto.py:49
 #: region/views/start_auto.py:58 region/views/start_auto.py:80
+#: storage/views/assets/assets_action.py:228
+#: storage/views/assets/storage_move.py:36
+#: storage/views/assets/storage_move.py:45
+#: storage/views/assets/storage_move.py:55
+#: storage/views/assets/storage_move.py:74
+#: storage/views/storage/cash_transfer.py:32
+#: storage/views/storage/cash_transfer.py:41
+#: storage/views/storage/cash_transfer.py:54
+#: storage/views/storage/cash_transfer.py:63
+#: storage/views/storage/cash_transfer.py:72
+#: storage/views/storage/cash_transfer.py:101
+#: storage/views/storage/cash_transfer.py:109
+#: storage/views/storage/cash_transfer.py:121
+#: storage/views/storage/new_storage.py:34
+#: storage/views/storage/new_storage.py:52
+#: storage/views/storage/new_storage.py:65
+#: storage/views/storage/new_storage.py:87
 #, fuzzy
 #| msgid "Закрыть"
 msgctxt "mining"
@@ -1027,7 +1044,10 @@ msgctxt "mining"
 msgid "Запасов руды в регионе недостаточно для добычи"
 msgstr ""
 
-#: region/views/do_mining.py:217
+#: region/views/do_mining.py:217 storage/views/assets/assets_action.py:229
+#: storage/views/assets/storage_move.py:75
+#: storage/views/storage/cash_transfer.py:122
+#: storage/views/storage/new_storage.py:88
 #, fuzzy
 #| msgid "Ошибка метода"
 msgctxt "mining"
@@ -1580,7 +1600,64 @@ msgstr ""
 msgid "Дроны - кубов"
 msgstr ""
 
+#: storage/templates/storage/redesign/assets.html:12
+#: storage/views/assets/assets.py:42
+#, fuzzy
+#| msgid "Активы"
+msgctxt "assets"
+msgid "Активы"
+msgstr "Lagerbestand"
+
+#: storage/templates/storage/redesign/assets.html:22
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "Выборы лидера"
+msgctxt "assets"
+msgid "выбор действия"
+msgstr "Präsidentschaftswahlen"
+
+#: storage/templates/storage/redesign/assets.html:23
+#, fuzzy
+#| msgid "Передать"
+msgctxt "assets"
+msgid "передать"
+msgstr "Übertragen"
+
+#: storage/templates/storage/redesign/assets.html:24
+#, fuzzy
+#| msgid "Продолжить"
+msgctxt "assets"
+msgid "уничтожить"
+msgstr "weiter"
+
+#: storage/templates/storage/redesign/assets.html:49
+#, fuzzy
+#| msgid "Вы летите в"
+msgctxt "assets"
+msgid "выберите склад"
+msgstr "Du fliegst nach"
+
+#: storage/templates/storage/redesign/assets.html:60
+#: storage/templates/storage/redesign/assets.html:115
+msgctxt "assets"
+msgid "объём (ед)"
+msgstr ""
+
+#: storage/templates/storage/redesign/assets.html:62
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "стоимость"
+msgctxt "assets"
+msgid "стоимость"
+msgstr "Kosten"
+
+#: storage/templates/storage/redesign/assets.html:77
+msgctxt "assets"
+msgid "подтвердить"
+msgstr ""
+
 #: storage/templates/storage/redesign/storage.html:11
+#: storage/views/storage/storage.py:32
 msgctxt "storage"
 msgid "Склад"
 msgstr "Lagerhaus"
@@ -1778,53 +1855,330 @@ msgstr "Im Lagerhaus"
 msgid "Передать"
 msgstr "Übertragen"
 
-#: storage/views/assets/assets.py:42
-msgid "Активы"
-msgstr "Lagerbestand"
+#: storage/views/assets/assets_action.py:39
+msgctxt "assets"
+msgid "Целевой Склад не заполнен"
+msgstr ""
+
+#: storage/views/assets/assets_action.py:40
+#, fuzzy
+#| msgctxt "storage_transfer"
+#| msgid "Перемещение Склада"
+msgctxt "assets"
+msgid "Перемещение товаров"
+msgstr "Verlagerung des Lagers"
+
+#: storage/views/assets/assets_action.py:41
+#: storage/views/assets/assets_action.py:68
+#: storage/views/assets/assets_action.py:110
+#: storage/views/assets/assets_action.py:120
+#: storage/views/assets/assets_action.py:129
+#: storage/views/assets/assets_action.py:136
+#: storage/views/assets/assets_action.py:143
+#: storage/views/assets/assets_action.py:150
+#: storage/views/assets/assets_action.py:169
+#: storage/views/assets/assets_action.py:209
+#: storage/views/assets/assets_action.py:216
+#, fuzzy
+#| msgid "Закрыть"
+msgctxt "assets"
+msgid "Закрыть"
+msgstr "Schließen"
+
+#: storage/views/assets/assets_action.py:66
+#: storage/views/assets/assets_action.py:167
+#, fuzzy
+#| msgid "Склад"
+msgctxt "assets"
+msgid "Склад"
+msgstr "Lagerhaus"
+
+#: storage/views/assets/assets_action.py:66
+#: storage/views/assets/assets_action.py:167
+msgctxt "assets"
+msgid "вам не принадлежит"
+msgstr ""
+
+#: storage/views/assets/assets_action.py:67
+#: storage/views/assets/assets_action.py:109
+#: storage/views/assets/assets_action.py:119
+#: storage/views/assets/assets_action.py:128
+#: storage/views/assets/assets_action.py:135
+#: storage/views/assets/assets_action.py:142
+#: storage/views/assets/assets_action.py:149
+#, fuzzy
+#| msgctxt "storage_transfer"
+#| msgid "Перемещение Склада"
+msgctxt "assets"
+msgid "Перемещение товара"
+msgstr "Verlagerung des Lagers"
+
+#: storage/views/assets/assets_action.py:108
+msgctxt "assets"
+msgid "Недостаточно средств для оплаты доставки"
+msgstr ""
+
+#: storage/views/assets/assets_action.py:115
+#: storage/views/assets/assets_action.py:125
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "склад в регионе"
+msgctxt "assets"
+msgid "На складе в регионе "
+msgstr "Lagerhaus in der Region"
+
+#: storage/views/assets/assets_action.py:117
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "assets"
+msgid " недостаточно места для товара "
+msgstr "Auffüllen der Energie"
+
+#: storage/views/assets/assets_action.py:118
+#: storage/views/assets/assets_action.py:127
+msgctxt "assets"
+msgid "Требуется: "
+msgstr ""
+
+#: storage/views/assets/assets_action.py:118
+#: storage/views/assets/assets_action.py:127
+#, fuzzy
+#| msgctxt "has_storage"
+#| msgid "наличные"
+msgctxt "assets"
+msgid ", в наличии: "
+msgstr "Geld"
+
+#: storage/views/assets/assets_action.py:126
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "assets"
+msgid " недостаточно товара "
+msgstr "Auffüllen der Energie"
+
+#: storage/views/assets/assets_action.py:126
+#, fuzzy
+#| msgctxt "storage_transfer"
+#| msgid "перенести"
+msgctxt "assets"
+msgid " для передачи."
+msgstr "bewegen"
+
+#: storage/views/assets/assets_action.py:134
+msgctxt "assets"
+msgid "Товары для передачи не выбраны"
+msgstr ""
+
+#: storage/views/assets/assets_action.py:141
+msgctxt "assets"
+msgid "В целевом Складе заполнены значения"
+msgstr ""
+
+#: storage/views/assets/assets_action.py:148
+msgctxt "assets"
+msgid "Целевой Склад вам не принадлежит"
+msgstr ""
+
+#: storage/views/assets/assets_action.py:168
+#: storage/views/assets/assets_action.py:208
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "assets"
+msgid "Уничтожение товара"
+msgstr "Auffüllen der Energie"
+
+#: storage/views/assets/assets_action.py:205
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "склад в регионе"
+msgctxt "assets"
+msgid "На складе в регионе"
+msgstr "Lagerhaus in der Region"
+
+#: storage/views/assets/assets_action.py:206
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "assets"
+msgid "недостаточно товара"
+msgstr "Auffüllen der Energie"
+
+#: storage/views/assets/assets_action.py:207
+msgctxt "assets"
+msgid "Требуется:"
+msgstr ""
+
+#: storage/views/assets/assets_action.py:207
+#, fuzzy
+#| msgctxt "has_storage"
+#| msgid "наличные"
+msgctxt "assets"
+msgid ", в наличии:"
+msgstr "Geld"
+
+#: storage/views/assets/assets_action.py:214
+#, fuzzy
+#| msgid "Некорректное значение"
+msgctxt "assets"
+msgid "Некорректное действие"
+msgstr "Fehlerhafter Wert"
+
+#: storage/views/assets/assets_action.py:215
+#: storage/views/assets/assets_action.py:227
+msgctxt "assets"
+msgid "Операции с товарами"
+msgstr ""
+
+#: storage/views/assets/storage_move.py:35
+#: storage/views/assets/storage_move.py:44
+#: storage/views/assets/storage_move.py:54
+#, fuzzy
+#| msgctxt "storage_transfer"
+#| msgid "Перемещение Склада"
+msgctxt "assets"
+msgid "Перемещение Склада"
+msgstr "Verlagerung des Lagers"
+
+#: storage/views/assets/storage_move.py:37
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "склад в регионе"
+msgctxt "assets"
+msgid "Склад не заполнен"
+msgstr "Lagerhaus in der Region"
+
+#: storage/views/assets/storage_move.py:46
+msgctxt "assets"
+msgid "Указанный Склад вам не принадлежит"
+msgstr ""
+
+#: storage/views/assets/storage_move.py:56
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "склад в регионе"
+msgctxt "assets"
+msgid "Указанный Склад уже в текущем регионе"
+msgstr "Lagerhaus in der Region"
+
+#: storage/views/assets/storage_move.py:73
+#, fuzzy
+#| msgctxt "storage_transfer"
+#| msgid "Перемещение Склада"
+msgctxt "mining"
+msgid "Перемещение Склада"
+msgstr "Verlagerung des Lagers"
 
 #: storage/views/factory/factory.py:47
 msgid "Производство"
 msgstr "Produktion"
 
-#: storage/views/storage/cash_transfer.py:29
+#: storage/views/storage/cash_transfer.py:31
+#: storage/views/storage/cash_transfer.py:40
+#: storage/views/storage/cash_transfer.py:53
+#: storage/views/storage/cash_transfer.py:62
+#: storage/views/storage/cash_transfer.py:71
+#: storage/views/storage/cash_transfer.py:100
+#: storage/views/storage/cash_transfer.py:108
+#: storage/views/storage/cash_transfer.py:120
+#: storage/views/storage/new_storage.py:86
+#, fuzzy
+#| msgctxt "has_storage"
+#| msgid "всего денег"
+msgctxt "storage"
+msgid "Передача денег"
+msgstr "das gesamte Geld"
+
+#: storage/views/storage/cash_transfer.py:33
+#, fuzzy
+#| msgid "Отрицательное число денег игрока"
+msgctxt "storage"
 msgid "Отрицательное число денег игрока"
 msgstr "Du hast nicht ausreichend Geld"
 
-#: storage/views/storage/cash_transfer.py:32
+#: storage/views/storage/cash_transfer.py:42
+#, fuzzy
+#| msgid "Некорректное число денег игрока"
+msgctxt "storage"
 msgid "Некорректное число денег игрока"
 msgstr "Du hast die falsche Anzahl des Geldes angegeben"
 
-#: storage/views/storage/cash_transfer.py:40
+#: storage/views/storage/cash_transfer.py:55
+#, fuzzy
+#| msgid "Отрицательное число денег Склада"
+msgctxt "storage"
 msgid "Отрицательное число денег Склада"
 msgstr "Du hast nicht ausreichend Geld im Lagerhaus"
 
-#: storage/views/storage/cash_transfer.py:43
+#: storage/views/storage/cash_transfer.py:64
+#, fuzzy
+#| msgid "Некорректное число денег Склада"
+msgctxt "storage"
 msgid "Некорректное число денег Склада"
 msgstr "Du hast die falsche Anzahl des Geldes im Lager angegeben"
 
-#: storage/views/storage/cash_transfer.py:47
+#: storage/views/storage/cash_transfer.py:73
+#, fuzzy
+#| msgid "В этом регионе нет Склада"
+msgctxt "storage"
 msgid "В этом регионе нет Склада"
 msgstr "Es gibt kein Lagerhaus in dieser Region"
 
-#: storage/views/storage/cash_transfer.py:69
+#: storage/views/storage/cash_transfer.py:102
+#, fuzzy
+#| msgid "Данные кошелька не совпадают с введенными"
+msgctxt "storage"
 msgid "Данные кошелька не совпадают с введенными"
 msgstr "Die Angaben zum Budget stimmen nicht mit den angegebenen Daten überein"
 
-#: storage/views/storage/cash_transfer.py:72
+#: storage/views/storage/cash_transfer.py:110
+#, fuzzy
+#| msgid "Недопустим ввод отрицательных чисел"
+msgctxt "storage"
 msgid "Недопустим ввод отрицательных чисел"
 msgstr "Minusbeträge können nicht eingegeben werden"
 
-#: storage/views/storage/cash_transfer.py:79
-msgid "incorrect_method"
-msgstr "fehlerhafte_Methode"
+#: storage/views/storage/new_storage.py:32
+#: storage/views/storage/new_storage.py:50
+#: storage/views/storage/new_storage.py:63
+#, fuzzy
+#| msgid "На Складе"
+msgctxt "storage"
+msgid "Новый Склад"
+msgstr "Im Lagerhaus"
 
-#: storage/views/storage/storage.py:32
-msgid "Склад"
-msgstr "Lagerhaus"
+#: storage/views/storage/new_storage.py:33
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "выберите склад списания материалов"
+msgctxt "storage"
+msgid "Не найден Склад списания материалов"
+msgstr "ein Depot für abzuschreibende Materialien auswählen"
+
+#: storage/views/storage/new_storage.py:51
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "storage"
+msgid "Недостаточно ресурсов"
+msgstr "Auffüllen der Energie"
+
+#: storage/views/storage/new_storage.py:64
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "storage"
+msgid "Недостаточно денег на транспортировку"
+msgstr "Auffüllen der Energie"
 
 #: war/models/squads/light_vehicle.py:49 war/models/wars/war_side.py:34
 msgid "ПТ-орудия"
 msgstr "PT-Kanonen"
+
+#, fuzzy
+#~| msgid "Склад"
+#~ msgctxt "assets"
+#~ msgid "Склад №"
+#~ msgstr "Lagerhaus"
+
+#~ msgid "incorrect_method"
+#~ msgstr "fehlerhafte_Methode"
 
 #, fuzzy
 #~| msgctxt "overview"
