--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-01 12:08+0300\n"
-"PO-Revision-Date: 2022-12-01 15:59+0300\n"
+"PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: id\n"
@@ -416,7 +416,7 @@ msgstr "sedang dalam proses..."
 #: player/templates/player/redesign/overview_skills.html:111
 #: player/templates/player/redesign/overview_skills.html:160
 msgid "изучить"
-msgstr "tingkatkan kemampuan"
+msgstr "tingkatkan"
 
 #: player/templates/player/redesign/overview_skills.html:68
 msgid "Интеллект"
@@ -524,7 +524,7 @@ msgstr "waktu masih berjalan"
 #: player/templates/player/redesign/player_status.html:39
 msgctxt "status"
 msgid "пополнить"
-msgstr "mengisi ulang"
+msgstr "isi ulang"
 
 #: player/templates/player/redesign/profile.html:165
 msgid "настройки"
