фикс перевода Торговли

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-01 21:24+0300\n"
+"POT-Creation-Date: 2022-12-02 17:18+0300\n"
 "PO-Revision-Date: 2022-11-22 22:05+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2068,6 +2068,13 @@ msgctxt "w_trading"
 msgid "Сумма"
 msgstr ""
 
+#: storage/templates/storage/trading/trading.html:65
+#, fuzzy
+#| msgid "Государственные налоги"
+msgctxt "w_trading"
+msgid "Государственнные закупки"
+msgstr "Staatliche Steuern"
+
 #: storage/templates/storage/trading/trading.html:70
 #, fuzzy
 #| msgid "Продолжить"
@@ -2098,6 +2105,13 @@ msgstr "Partei"
 msgctxt "w_trading"
 msgid "Мои"
 msgstr "Barracken"
+
+#: storage/templates/storage/trading/trading.html:99
+#, fuzzy
+#| msgid "Вы летите в"
+msgctxt "w_trading"
+msgid "Выберите товар"
+msgstr "Du fliegst nach"
 
 #: storage/templates/storage/trading/trading.html:109
 msgctxt "w_trading"
