--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-01 21:24+0300\n"
-"PO-Revision-Date: 2022-12-01 21:30+0300\n"
+"POT-Creation-Date: 2022-12-02 17:18+0300\n"
+"PO-Revision-Date: 2022-12-02 17:19+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1963,6 +1963,11 @@ msgctxt "w_trading"
 msgid "Сумма"
 msgstr "Sum"
 
+#: storage/templates/storage/trading/trading.html:65
+msgctxt "w_trading"
+msgid "Государственнные закупки"
+msgstr "State acquisition"
+
 #: storage/templates/storage/trading/trading.html:70
 msgctxt "w_trading"
 msgid "Продажа"
@@ -1987,6 +1992,11 @@ msgstr "Party"
 msgctxt "w_trading"
 msgid "Мои"
 msgstr "Mine"
+
+#: storage/templates/storage/trading/trading.html:99
+msgctxt "w_trading"
+msgid "Выберите товар"
+msgstr "Choose good"
 
 #: storage/templates/storage/trading/trading.html:109
 msgctxt "w_trading"
