--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-01 21:24+0300\n"
+"POT-Creation-Date: 2022-12-02 17:18+0300\n"
 "PO-Revision-Date: 2022-10-31 18:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2154,6 +2154,13 @@ msgctxt "w_trading"
 msgid "Сумма"
 msgstr ""
 
+#: storage/templates/storage/trading/trading.html:65
+#, fuzzy
+#| msgid "Государственные налоги"
+msgctxt "w_trading"
+msgid "Государственнные закупки"
+msgstr "Дзяржаўныя падаткі"
+
 #: storage/templates/storage/trading/trading.html:70
 #, fuzzy
 #| msgid "Продолжить"
@@ -2184,6 +2191,13 @@ msgstr "Партыя"
 msgctxt "w_trading"
 msgid "Мои"
 msgstr "налады"
+
+#: storage/templates/storage/trading/trading.html:99
+#, fuzzy
+#| msgid "Вы летите в"
+msgctxt "w_trading"
+msgid "Выберите товар"
+msgstr "Вы ляціце да"
 
 #: storage/templates/storage/trading/trading.html:109
 msgctxt "w_trading"
